# UGV_WS

./: .gitignore  ARCHITECTURE.md  LICENSE  PRODUCTION_CONFIG.yaml  PRODUCTION_CONFIG.yaml.orig  PRODUCTION_CONFIG_SIM.yaml  README.md  RUNBOOK.md  SETUP.md  SYSTEM_ARCHITECTURE.md  autonomous_tyre_inspection_master_plan.md  collect_mission_diagnostics.sh  concurrency_review.md  demo_preparation.md  failure_injection_defense_report.md  mission_determinism_audit.md  nav2_alignment_report.md  observability_upgrade.md  perception_stability_report.md  poster_content.md  requirements.txt  stress_test_results.md  system_reaudit_report.md  thesis_draft.md
analysis/: acceptance_criteria.md  aora_topic_map.md  correct_log_identification.md  detection_to_navigation_trace.md  diagnosis_2026-02-25.md  disk_space.txt  final_followup_report_20260225.md  final_report_20260225.md  invariants_checklist.md  journal_kernel_tail.txt  log_persistence_validation.md  mem.txt  pr_description.md  spin_root_cause.md  timeline_2026-02-25.md  verification_checklist.md
ci/: ci_pipeline.yml  run_tests.sh
docs/: 100_PERCENT_RELIABILITY_PLAN.md  ACCEPTANCE_CRITERIA.md  AURORA_FIRMWARE_2.11_DEEP_DIVE.md  AURORA_MISSION_SETUP.md  AURORA_TF_AND_LAUNCH.md  AURORA_TOPIC_NODE_REFERENCE.md  CHANGELOG_CURSOR.md  MISSION_FLOW.md  MISSION_FORENSIC_REPORT_2026-02-24.md  MISSION_FORENSIC_REPORT_SPIN_2026-02-24.md  MISSION_PIPELINE.md  MISSION_PRODUCTION_AUDIT.md  PHASE_H_CLOSED_LOOP_PROCEDURE.md  PLANNING_TEST_STUB_MOTOR.md  REPOSITORY_CLEANUP_PLAN.md  RVIZ_FROM_VM_AND_DIAGNOSTICS.md  SIMULATION_RESULTS.md  TIRE_DETECTION_TROUBLESHOOTING.md  VISION_TROUBLESHOOTING.md  code_map.md  code_map_tire_inspection_bot.md  integration_blueprint.md  mission_report_mission_068703008c8e.md  mission_report_mission_127aea695cfa.md  mission_report_mission_bce993189a80.md  port_plan.md  resources_dump.csv  resources_dump.json
inspection_manager/: alignment.py  approach_planner.py  manager_node.py  (+2 more)
sim/: CMakeLists.txt  package.xml  record_aurora_mission.sh  record_mock_mission.sh  stress_test_harness.py  test_mission.py
sim/bags/: .gitkeep
sim/launch/: vehicle_inspection_sim.launch.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/aurora_mock/: package.xml  setup.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/aurora_mock/aurora_mock/: __init__.py  aurora_mock_node.py  clock_publisher.py  depth_generator_node.py  sensor_realism.py  synthetic_vehicle_publisher.py  vehicle_point_cloud_generator.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/aurora_mock/config/: sensor_realism.yaml  sensor_timing_realistic.yaml
src/Tyre_Inspection_Bot/src/amr_hardware/src/aurora_mock/launch/: aurora_mock.launch.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/inspection_manager_interfaces/: CMakeLists.txt  package.xml
src/Tyre_Inspection_Bot/src/amr_hardware/src/inspection_manager_interfaces/action/: AlignTire.action  ApproachTire.action
src/Tyre_Inspection_Bot/src/amr_hardware/src/inspection_manager_interfaces/msg/: MissionStatus.msg
src/Tyre_Inspection_Bot/src/amr_hardware/src/inspection_manager_interfaces/srv/: CapturePhoto.srv  StartMission.srv
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/: CMakeLists.txt  package.xml
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/config/: aurora_depth_intrinsics.yaml  centroid_servo.yaml  config.yaml  tire_detector_pcl.yaml
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/include/segmentation_3d/: point_processor.hpp  segmentation_processor.h
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/launch/: segment_3d.launch.py  vehicle_detection_visualize.launch.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/scripts/: aurora_semantic_fusion_node.py  centroid_servo_node.py  depth_to_registered_pointcloud_node.py  print_inspection_model_classes.py  simulated_detection_node.py  tire_detector_pcl_node.py  tire_merger_node.py  tyre_3d_projection_node.py  ultralytics_node.py  ultralytics_node_cpu.py  vehicle_boxes_marker_node.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/segment_3d/segmentation_3d/src/: point_processor.cpp  segmentation_processor.cpp
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_bringup/: package.xml  setup.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_bringup/config/: aurora_vehicle.rviz  full_mission_monitoring.rviz  full_visualization.rviz  tyre_detection.rviz
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_bringup/launch/: demo_aurora_vehicle.launch.py  demo_full_visualization.launch.py  demo_navigation.launch.py  demo_photo_capture.launch.py  demo_tyre_detection.launch.py  demo_tyre_inspection.launch.py  minimal_tyre_inspection.launch.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_bringup/ugv_bringup/: __init__.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/: CMakeLists.txt  package.xml
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/behavior_trees/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/launch/: aurora_bringup.launch.py  aurora_calibration.launch.py  aurora_testing.launch.py  ekf_aurora.launch.py  full_bringup.launch.py  nav_aurora.launch.py  ugv_visualization.launch.py  vision_only.launch.py
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/param/: README.md  ekf_aurora.yaml  nav_aurora.yaml  nav_aurora_ekf.yaml  nav_aurora_ekf_overrides.yaml  nav_aurora_sim.yaml  nav_aurora_tight_ekf.yaml  nav_aurora_tight_full.yaml  vehicle_speed_filter.yaml
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/rviz/: tyre_inspection_demo.rviz  ugv_visualization.rviz
src/Tyre_Inspection_Bot/src/amr_hardware/src/ugv_nav/scripts/: cmd_vel_mux_node.py  depth_gate_node.py  nav_lifecycle_startup.py  navigation_permitted_publisher.py  vehicle_speed_filter_node.py  world_frame_tf_publisher.py
src/inspection_waypoint_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/inspection_waypoint_plugins/src/: photo_capture_waypoint_task.cpp
(+183 files in other folders)
