<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.1.0</version>
  <description>Simulation launch and scripts for tire inspection (rosbag replay, Aurora mock)</description>
  <maintainer email="user@example.com">UGV</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ugv_nav</exec_depend>
  <exec_depend>segmentation_3d</exec_depend>
  <exec_depend>inspection_manager</exec_depend>
  <exec_depend>aurora_mock</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
