<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/XMLSchema"?>
<package format="3">
  <name>inspection_waypoint_plugins</name>
  <version>0.1.0</version>
  <description>Nav2 waypoint task executor: trigger tyre inspection photo capture at each waypoint.</description>
  <maintainer email="user@example.com">ugv</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_waypoint_follower plugin="${prefix}/share/${PROJECT_NAME}/plugins.xml"/>
  </export>
</package>
