<?xml version="1.0"?>
<package format="3">
  <name>inspection_manager_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces for deterministic tire inspection mission manager.</description>
  <maintainer email="user@example.com">inspection_manager_interfaces</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
