cmake_minimum_required(VERSION 3.8)
project(ugv_nav)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(nav2_bringup REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(
  DIRECTORY launch param maps rviz behavior_trees
  DESTINATION share/${PROJECT_NAME}
)
install(
  PROGRAMS
    scripts/nav_lifecycle_startup.py
    scripts/depth_gate_node.py
    scripts/navigation_permitted_publisher.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
