<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ws@todo.todo">ws</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>inspection_waypoint_plugins</exec_depend>
  <exec_depend>nonpersistent_voxel_layer</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>slamware_ros_sdk</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ugv_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- Optional: for ekf_aurora.launch.py (sensor fusion); install: ros-humble-robot-localization -->
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
