<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segmentation_3d</name>
  <version>0.0.0</version>
  <description>The segmentation_3d package</description>
  <maintainer email="momagdii@todo.todo">momagdii</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gb_visual_detection_3d_msgs</depend>
  <depend>pcl_conversions</depend>
  <!-- pcl_ros removed - deprecated in ROS 2 Humble, pcl_conversions provides needed functionality -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>segmentation_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs_py</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scikit-learn</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
